--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,84 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel='stylesheet' href="/assets/cs/style.css" type='text/css'>
+    <title>Eat-Da-Burger</title>
+    <script src=https://code.jquery.com/jquery.js></script>
+    <script src='assets/js/cats.js'></script>
 </head>
 
 <body>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                <img src="./assets/download.jpg" alt="burgerpic">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12">
+                <h1> Eat-Da-Burger!</h1>
+            </div>
+        </div>
+    </div>
 
+    <br>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                Enter a burger you want to eat & click the "Submit" button.
+            </div>
+        </div>
+        <div class="row">
+            <form>
+                <div class="form-group">
+                    <input type="text" class="form-control" id="burgerInput">
+                </div>
+
+                <button id= "burgerSubmitBtn"type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
+
+    </div>
+
+    <br>
+    <br>
+    <br>
+    <div class="container">
+        <h2>Eat and Delete a burger.</h2>
+
+        <div class="row">
+            <div class="col-sm-6">
+                <ul id="devourList">
+
+                </ul>
+            </div>
+
+            <div class="col-sm-6">
+                <ul id="deleteList">
+
+                </ul>
+            </div>
+        </div>
+
+
+
+    </div>
+
+
+
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.js"
+        integrity="sha256-DrT5NfxfbHvMHux31Lkhxg42LY6of8TaYyK50jnxRnM=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
