--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel='stylesheet' href="/assets/cs/style.css" type='text/css'>
     <title>Eat-Da-Burger</title>
-    <script src=https://code.jquery.com/jquery.js></script>
-    <script src='assets/js/cats.js'></script>
+
 </head>
 
 <body>
@@ -38,7 +36,7 @@
                     <input type="text" class="form-control" id="burgerInput">
                 </div>
 
-                <button id= "burgerSubmitBtn"type="submit" class="btn btn-primary">Submit</button>
+                <button id="burgerSubmitBtn" type="submit" class="btn btn-primary">Submit</button>
             </form>
         </div>
 
@@ -71,14 +69,15 @@
 
 
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.js"
-        integrity="sha256-DrT5NfxfbHvMHux31Lkhxg42LY6of8TaYyK50jnxRnM=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <script src='assets/js/index.js'></script>
 </body>
 
 </html>
