--- a/public/index.html
+++ b/public/index.html
@@ -5,39 +5,44 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Eat-Da-Burger</title>
 
 </head>
 
 <body>
     <div class="container">
-        <div class="row">
+        <div class="row text-center">
             <div class="col-sm-12">
-                <img src="./assets/download.jpg" alt="burgerpic">
+                <img src="./assets/download.jpg" class="img-fluid" alt="burgerpic">
             </div>
         </div>
         <div class="row">
             <div class="col-sm-12">
-                <h1> Eat-Da-Burger!</h1>
+                <h1 class="text-center"> Eat-Da-Burger!</h1>
             </div>
         </div>
     </div>
 
     <br>
-    <div class="container">
+    <div class="container text-center">
         <div class="row">
-            <div class="col-sm-12">
+            <div class="col-sm-12 text-center">
                 Enter a burger you want to eat & click the "Submit" button.
             </div>
         </div>
-        <div class="row">
-            <form>
-                <div class="form-group">
-                    <input type="text" class="form-control" id="burgerInput">
-                </div>
+        <br>
 
-                <button id="burgerSubmitBtn" type="submit" class="btn btn-primary">Submit</button>
-            </form>
+        <div class="row">
+            <div class="col-sm-12">
+                <form>
+                    <div class="form-group">
+                        <input type="text" class="form-control text-center" id="burgerInput">
+                    </div>
+
+                    <button id="burgerSubmitBtn" type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            </div>
         </div>
 
     </div>
@@ -46,7 +51,12 @@
     <br>
     <br>
     <div class="container">
-        <h2>Eat and Delete a burger.</h2>
+        <div class="row">
+            <div class="col-sm-12">
+                <h2 class="text-center">Eat and Delete a burger.</h2>
+            </div>
+        </div>
+        <br>
 
         <div class="row">
             <div class="col-sm-6">
